--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         <button id="restartButton">Restart</button>
       </div>      
      
-      <script src="index.js"></script>
+      <script src="script.js"></script>
 </body>
 </html>
